Move v20a DTDs to the correct place
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8611 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -595,6 +595,13 @@
 		destdir="${dist-shbat.dir}/context/resources/schema/dtd"
 		extension="-full.dtd"
 		style="tools/dtdconverters/dtdx2dtd.xsl"/>
+
+	<move todir="${dist-shbat.dir}/context/resources/schema/dtd/v20a">
+		<fileset dir="${dist-shbat.dir}/context/resources/schema/dtd">
+			<include name="document-v20-full.dtd"/>
+			<include name="faq-v20-full.dtd"/>
+		</fileset>
+	</move>
 </target>
 
 
