Fix 5941 validation errors reported by validate-site :-) If someone wants to fix these, then see flat2document.xsl
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8616 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -6,3 +6,5 @@ project.name=forrest
 #project.skin=forrest-site
 #project.skin=krysalis-site
 #project.skin=avalon-tigris
+
+forrest.validate.xdocs.excludes=*.dtdx.xml
