Add message to build to show -projecthelp option. PR: FOR-45 Submitted by: Dave Brondsema dave<AT>brondsema.net
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8620 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,7 @@
 
       Using ${ant.version}
       Build file ${ant.file}
+      Use 'build.[sh|bat] -projecthelp' to see other options.
       Build system home ${ant.home}
       Build number ${build.number}
       Project Name ${ant.project.name}
