Explicitly exclude site.xml now.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8621 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -7,4 +7,4 @@ project.name=forrest
 #project.skin=krysalis-site
 #project.skin=avalon-tigris
 
-forrest.validate.xdocs.excludes=*.dtdx.xml
+forrest.validate.xdocs.excludes=site.xml,*.dtdx.xml
