Add the "forrest-css" skin option.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8636 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -4,6 +4,7 @@
 
 project.name=forrest
 #project.skin=forrest-site
+#project.skin=forrest-css
 #project.skin=krysalis-site
 #project.skin=avalon-tigris
 
