Added new two blocks to exclude.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8657 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/cocoon_upgrade/local.blocks.properties
+++ b/etc/cocoon_upgrade/local.blocks.properties
@@ -58,9 +58,11 @@ exclude.block.xmldb=true
 exclude.block.apples=true
 #exclude.block.asciiart=true
 exclude.block.axis=true
+exclude.block.cron=true
 exclude.block.eventcache=true
 exclude.block.linotype=true
 exclude.block.mail=true
+exclude.block.midi=true
 exclude.block.qdox=true
 exclude.block.petstore=true
 exclude.block.precept=true
