Added more info about possible log levels.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8660 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -108,6 +108,7 @@
 # The URL to start crawling from
 #project.start-uri=index.html
 # Set logging level for messages printed to the console
+# (DEBUG, INFO, WARN, ERROR, FATAL_ERROR)
 #project.debuglevel=ERROR
 # Max memory to allocate to Java
 #forrest.maxmemory=64m
