<action dev="NKB" type="add" context="skins">         In the common skin and derivatives, allow xhtml-namespaced elements in         document elements to passthrough when rendering to html.         Added also example in the forrest seed (fresh-site).       </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8699 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -80,7 +80,7 @@
 #forrest.validate.xdocs.failonerror=${forrest.validate.failonerror}
 #
 #forrest.validate.xdocs.includes=**/*.x*
-#forrest.validate.xdocs.excludes=site.xml
+forrest.validate.xdocs.excludes=site.xml,samples/multiple-namespaces.xml
 #
 #forrest.validate.skinconf.includes=${skinconf-file}
 #forrest.validate.skinconf.excludes=
