--- a/forrest.properties
+++ b/forrest.properties
@@ -9,3 +9,4 @@ project.name=forrest
 #project.skin=avalon-tigris
 
 forrest.validate.xdocs.excludes=site.xml,*.dtdx.xml
+project.bugtracking-url=http://issues.cocoondev.org/jira/secure/ViewIssue.jspa?key=
