--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -115,3 +115,4 @@
 # Any other arguments to pass to the JVM. For example, to run on an X-less
 # server, set to -Djava.awt.headless=true
 #forrest.jvmargs=
+#project.bugtracking-url=http://nagoya.apache.org/bugzilla/show_bug.cgi?id=
