Ant needs resolver during build, so copy the current one from lib/core/
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8722 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -397,6 +397,9 @@
     <copy todir="${dist-shbat.dir}/ant">
       <fileset dir="tools/ant" />
     </copy>
+    <copy todir="${dist-shbat.dir}/ant/lib">
+      <fileset dir="lib/core" includes="resolver*.jar"/>
+    </copy>
 
     <!-- Copy forrestbot -->
     <mkdir dir="${dist-shbat.dir}/forrestbot" />
