--- a/build.xml
+++ b/build.xml
@@ -45,7 +45,7 @@
     <property name="name"                  value="apache-forrest"/>
     <property name="packages"              value="${xgump.module.project.packages}"/>
     <property name="version"
-      value="${xgump.module.project.version.major}.${xgump.module.project.version.minor}${xgump.module.project.version.tag}"/>
+      value="${xgump.module.project.version.major}.${xgump.module.project.version.minor}.${xgump.module.project.version.fix}${xgump.module.project.version.tag}"/>
 
     <property name="resource.dir"          location="src/resources"/>
     <property name="java.dir"          location="src/java"/>
