Patch Facility for contributors. This comes from Ant's project. Submitted by:	Jan Materne
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8853 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -611,7 +611,15 @@
     <include name="v20a/*.dtdx"/>
   </xslt>
 
-</target>
+  </target>
+
+
+  <!-- =================================================================== -->
+  <!-- Use Apache Ant to generate a patch file                             -->
+  <!-- =================================================================== -->
+    <target name="patch">
+      <ant antfile="src/targets/patch.xml" target="patchpackage"/>
+    </target>
 
 
 </project>
