Get new forrestbot minimally working
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8898 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -389,6 +389,12 @@
       <fileset dir="src/resources/forrestbot/bin"/>
     </copy>
 
+    <!-- Copy forrestbot2 -->
+    <mkdir dir="${dist-shbat.dir}/forrestbot2" />
+    <copy todir="${dist-shbat.dir}/forrestbot2">
+		<fileset dir="src/resources/forrestbot2"/>
+    </copy>
+
     <!-- Fix bin/ permissions -->
     <fixcrlf eol="crlf" srcdir="${dist-shbat.dir}/bin" includes="*.bat"/>
     <fixcrlf eol="lf" srcdir="${dist-shbat.dir}/bin" excludes="*.bat"/>
