<action dev="NKB" type="add" context="core">           Now images are generated from the xdocs content dir as if they           were in the resources/images dir. The latter will be phased out.       </action>       <action dev="NKB" type="fix" context="core">           Fixed tha handling of images and resources in the resources.xmap           pipeline, to cater for the new system that does not copy docs prior           to rendering.       </action>       <action dev="NKB" type="add" context="shbat">           Added a new property to forrest.properties            (project.raw-content-dir=${project.content-dir}/content)            to define where raw files are to be served from.            Also removed the internal property real-content.dir that was            used internally for this and replaced it with a raw-content.dir            property.       </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8928 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -32,6 +32,7 @@
 #project.content-dir=src/documentation
 #project.conf-dir=${project.content-dir}/conf
 #project.sitemap-dir=${project.content-dir}
+#project.raw-content-dir=${project.content-dir}/content
 #project.xdocs-dir=${project.content-dir}/content/xdocs
 #project.resources-dir=${project.content-dir}/resources
 #project.stylesheets-dir=${project.resources-dir}/stylesheets
