src/targets/patch.xml -> tools/targets/patch.xml
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8939 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -611,7 +611,7 @@
   <!-- Use Apache Ant to generate a patch file                             -->
   <!-- =================================================================== -->
     <target name="patch">
-      <ant antfile="src/targets/patch.xml" target="patchpackage"/>
+      <ant antfile="tools/targets/patch.xml" target="patchpackage"/>
     </target>
 
 
