Fix dirs, get them from the properties.xml file.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8946 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/forrestbar/build.xml
+++ b/src/forrestbar/build.xml
@@ -6,10 +6,7 @@
   <!-- Default init values-->
   <target name="init">
     <property name="build.dir" location="build"/>
-    <property name="forrestbot.links.forrest.local-embedded.name" value="forrest"/>
-    <property name="forrestbot.links.forrest.local-embedded.url" value="http://xml.apache.org/forrest/"/>
-    <property name="forrestbot.links.forrest.local-webapp.name" value="forrest"/>
-    <property name="forrestbot.links.forrest.local-webapp.url" value="http://xml.apache.org/forrest/"/>
+    <xmlproperty file="properties.xml"                   keeproot="false" collapseAttributes="true" />
   </target>
     
   <!-- =================================================================== -->
