compile target is now "compile"
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8951 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -479,7 +479,7 @@
   <!-- =================================================================== -->
   <!-- Compile Cocoon components                                           -->
   <!-- =================================================================== -->
-  <target name="components.compile" depends="init">
+  <target name="compile" depends="init">
     <mkdir dir="${build.components.classes}"/>
     <javac srcdir=   "${java.dir}"
       destdir=       "${build.components.classes}"
