--- a/build.xml
+++ b/build.xml
@@ -49,15 +49,12 @@
       value="${xgump.module.project.version.major}.${xgump.module.project.version.minor}${xgump.module.project.version.tag}"/>
 
     <property name="resource.dir"          location="src/resources"/>
-    <property name="java.dir"          location="src/java"/>
+    <property name="java.dir"              location="src/java"/>
     <property name="build.dir"             location="build"/>
-    <property name="build.docs"            location="build/docs"/>
-   <!--
-    <property name="build.javadocs"        value="build/docs/javadocs"/>
-    -->
-    <property name="classes.dir" location="build/classes"/>
+    <property name="build.docs"            location="${build.dir}/docs"/>
+    <property name="build.classes"         location="${build.dir}/classes"/>
 
-    <property name="dist.dir"              location="build/dist" />
+    <property name="dist.dir"              location="${build.dir}/dist" />
     <property name="dist-shbat.dir"        location="${dist.dir}/shbat" />
 
     <property name="tools.dir"             location="tools"/>
@@ -477,12 +474,12 @@
 
 
   <!-- =================================================================== -->
-  <!-- Compile Cocoon components                                           -->
+  <!-- Compile Cocoon java classes                                         -->
   <!-- =================================================================== -->
   <target name="compile" depends="init">
-    <mkdir dir="${build.components.classes}"/>
+    <mkdir dir="${build.classes}"/>
     <javac srcdir=   "${java.dir}"
-      destdir=       "${build.components.classes}"
+      destdir=       "${build.classes}"
       debug=         "${build.compiler.debug}"
       optimize=      "${build.compiler.optimize}"
       deprecation=   "${build.compiler.deprecation}"
@@ -492,14 +489,12 @@
   </target>
 
   <!-- =================================================================== -->
-  <!-- Jar Cocoon components                                               -->
+  <!-- Jar Cocoon classes                                                  -->
   <!-- =================================================================== -->
-  <target name="jar" depends="compile">
-    <mkdir dir="${build.components.dir}"/>
+  <target name="jar" depends="init, compile">
     <jar destfile="${webapp.webinf.dir}/lib/xml-forrest-${version}.jar"
-      basedir="${build.components.classes}"/>
+      basedir="${build.classes}"/>
   </target>
-
 
   <!-- =================================================================== -->
   <!-- Generate DTDs with entities expanded                                -->
