Clean buildfile a bit.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8954 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -1,24 +1,14 @@
 <?xml version="1.0"?>
-<?xml-stylesheet type="text/xsl" href="./tools/stylesheets/build.xsl"?>
-
 <project default="dist" basedir="." name="Forrest build file">
-
-  <description>
-                   * ========================== *
-                   |   Forrest Build System     |
-                   * ========================== *
-                                 by
-
-                   Nicola Ken Barozzi (nicolaken@apache.org)
-                   Marc Johnson (mjohnson@apache.org)
-                   Jeff Turner (jefft@apache.org)
-
-                   Run the build script: build.bat or build.sh
-  </description>
 
   <import file="src/forrestbar/build.xml"/>
   
-  <target name="init">
+  <description>
+    Build system for Apache Xml Forrest.
+    Run the build script: build.bat or build.sh
+  </description>
+
+   <target name="init">
     <tstamp>
       <format property="YEAR" pattern="yyyy" locale="en"/>
     </tstamp>
@@ -72,7 +62,7 @@
       <fileset dir="lib" includes="**/*.jar"/>
       <pathelement location="${tools.jar}"/>
     </path>
-    
+
   </target>
 
   <target name="clean" depends="init" description="Delete all generated files">
